<resources>
    <string name="app_names">examen1</string>
    <string name="Suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="divide">Divide</string>
    <string name="multi">Multi</string>
    <string name="calcular">Calcular</string>
    <string name="volver">Volver</string>
    <string name="reset">Reset</string>
    <string name="resultado">Resultado</string>
</resources>